[&1.6] Issue 3308:  	 Long function names resp. selectors are overlapping with file name in Side Panels Partial solution, just makes the overlap less silly looking
http://code.google.com/p/fbug/source/detail?r=7690

--- a/extension/skin/classic/mac/debugger.css
+++ b/extension/skin/classic/mac/debugger.css
@@ -69,7 +69,7 @@
 .useA11y .panelStatusLabel:focus {
     outline-offset: -2px !important;
  }
- 
+
 .sourceBox > .sourceRow > .sourceLine {
     cursor: pointer;
 }
@@ -252,6 +252,7 @@
 .breakpointBlockHead > .objectLink-sourceLink {
     top: 2px;
     right: 20px;
+    background-color: #FFFFFF; // issue 3308
 }
 
 .breakpointBlockHead > .closeButton {
